<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sign_in_background"
    tools:context=".ui.screens.connection.signUp.SignUpFragment">

    <!-- EMAIL -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEditTextMailCreate"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/account_text_email"
        android:textColorHint="#23B2A4"
        app:boxStrokeColor="#23B2A4"
        app:hintTextColor="#23B2A4"
        android:inputType="textEmailAddress"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toTopOf="@+id/tiEditTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMailCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- NOM -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEditTextLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColorHint="#23B2A4"
        app:boxStrokeColor="#23B2A4"
        app:hintTextColor="#23B2A4"
        android:hint="@string/account_text_last_name"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toTopOf="@+id/tiEditTextFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEditTextMailCreate">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- PRENOM -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEditTextFirstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColorHint="#23B2A4"
        app:boxStrokeColor="#23B2A4"
        app:hintTextColor="#23B2A4"
        android:hint="@string/account_text_first_name"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toTopOf="@+id/tiEditTextPasswordCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEditTextLastName">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- MOT DE PASSE -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEditTextPasswordCreate"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColorHint="#23B2A4"
        app:boxStrokeColor="#23B2A4"
        app:hintTextColor="#23B2A4"
        android:hint="@string/account_text_password"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/tiSpinnerPromotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEditTextFirstName">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- SPINNER CLASSE-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiSpinnerPromotion"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/account_spinner_promotion"
        app:boxBackgroundMode="filled"
        android:textColorHint="#23B2A4"
        app:boxStrokeColor="#23B2A4"
        app:hintTextColor="#23B2A4"
        app:layout_constraintBottom_toTopOf="@+id/tiSpinnerFormation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEditTextPasswordCreate">
        <AutoCompleteTextView
            android:id="@+id/spinnerPromotion"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- SPINNER FILIERE-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiSpinnerFormation"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/account_spinner_formation"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="#23B2A4"
        app:hintTextColor="#23B2A4"
        android:textColorHint="#23B2A4"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateUserSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiSpinnerPromotion">
        <AutoCompleteTextView
            android:id="@+id/spinnerFormation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCreateUserSignUp"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:background="@drawable/createuser_figure_button"
        app:backgroundTint="#393a4e"
        android:text="@string/account_text_create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiSpinnerFormation"/>

</androidx.constraintlayout.widget.ConstraintLayout>
