<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sign_in_background"
    tools:context=".ui.screens.connection.signIn.SignInFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEditTextMailConnect"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:ems="10"
        android:hint="@string/account_text_email"
        android:inputType="textEmailAddress"
        android:text=""
        android:textColorHint="#23B2A4"
        app:boxStrokeColor="#23B2A4"
        app:hintTextColor="#23B2A4"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextMailConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEditTextPasswordConnect"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:ems="10"
        android:hint="@string/account_text_password"
        android:text=""
        android:textColorHint="#23B2A4"
        app:boxStrokeColor="#23B2A4"
        app:hintTextColor="#23B2A4"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEditTextMailConnect"
        app:layout_constraintVertical_bias="0.149" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordConnect"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonConnect"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:background="@drawable/createuser_figure_button"
        app:backgroundTint="#23B2A4"
        android:text="@string/account_text_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEditTextPasswordConnect"
        app:layout_constraintVertical_bias="0.461" />

    <Button
        android:id="@+id/buttonCreateUserSignIn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:background="@drawable/createuser_figure_button"
        android:text="@string/account_text_create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="#393a4e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnect"
        app:layout_constraintVertical_bias="0.308" />

</androidx.constraintlayout.widget.ConstraintLayout>
